# schwifty-lab

./: .gitignore  404.md  Gemfile  LICENSE  README.md  _config.local.yml  _config.yml  about-me.md  articles.md  index.md  start-dev.bat
_includes/: head-custom.html
_layouts/: default.html
_posts/: 2025-05-01-introduction.md  2025-10-18-ckad.md  2025-10-19-ckad.md  2025-10-20-ckad.md  2025-10-21-ckad.md  2025-10-22-ckad.md  2025-10-23-ckad.md  2025-11-04-talos.md  2025-11-21-ckad.md  2025-11-24-ckad.md  2025-12-29-cka.md  2026-01-02-ckad.md  2026-01-03-ckad.md  2026-01-20-dotnet.md  2026-01-26-ckad.md  2026-01-29-ckad.md  2026-01-31-ckad.md  2026-03-04-ckad.md  2026-04-17-ckad.md
ai-agent/: README.md  config.json  main.py  pyproject.toml
ai-agent/core/: chains.py  config.py  tools.py  utils.py  vectordb.py
ai-agent/tests/: test_config.py  test_kb.py
ai-agent/tools/: __init__.py  kb.py
assets/docs/: langchain.md  meetings_20250128.md  meetings_20250315.md
blog-articles/20250501-introduction/: article.yaml  article_EN.md  article_IT.md
blog-articles/20251018-ckad/: article_EN.md  article_IT.md
blog-articles/20251019-ckad/: article.yaml  article_EN.md  article_IT.md
blog-articles/20251020-ckad/: article.yaml  article_EN.md  article_IT.md
blog-articles/20251021-ckad/: artice_EN.md  article_EN.md
blog-articles/20251022-ckad/: article_EN.md
blog-articles/20251023-ckad/: article_EN.md
blog-articles/ckad-20251020/: article.yaml  article_EN.md  article_IT.md
blog-articles/introduction-20250501/: article.yaml  article_IT.md
blog-articles/manifests/: 20250501-introduction.yaml  20251018-ckad-testing-networkpolicy.yaml  20251019-ckad-what-is-kubernetes.yaml  20251020-ckad-build-a-container-image.yaml  20251020-ckad.yaml  20251021-ckad-choose-workload-resource.yaml  20251022-ckad-understanding-multi-container-pods.yaml  20251023-ckad-utilize-persistent-ephemeral-volumes.yaml  kustomization.yaml
blog-posts/20250501-introduction/: article_EN.md  article_IT.md
blog-posts/20251018-ckad/: article_EN.md
blog-posts/20251019-ckad/: article_EN.md
blog-posts/20251020-ckad/: article_EN.md
blog-posts/20251021-ckad/: article_EN.md
blog-posts/20251022-ckad/: article_EN.md
blog-posts/20251023-ckad/: article_EN.md
blog-posts/20251104-talos/: article_EN.md
blog-posts/20251121-ckad/: article_EN.md
blog-posts/20251124-ckad/: article_EN.md
blog-posts/20251229-cka/: article_EN.md  article_IT.md
blog-posts/20260102-ckad/: article_EN.md  article_IT.md
blog-posts/20260103-ckad/: article_EN.md  (+1 more)
projects/ai-agent/: .env.example  README.md  agent.py  config.example.llamacpp.json  config.example.openai.json  config.json  main.py  pyproject.toml  requirements.txt
projects/ai-agent/core/: chains.py  config.py  constants.py  prompts.py  vectordb.py
projects/ai-agent/providers/: base.py  llamacpp.py  openai.py
projects/ai-agent/tests/: test_config.py  test_kb.py
projects/ai-agent/tools/: __init__.py  kb.py  memory.py  utils.py
(+191 files in other folders)
