[project]
name = "ai-agent"
version = "0.2.0"
description = "A ReAct + RAG AI agent powered by **GPT-4o-mini** and **ChromaDB** for internal knowledge retrieval from Markdown documents."
authors = [
    {name = "Hiro",email = "webmaster@supaahiro.org"}
]
license = {text = "**No-Commercial License** (see LICENSE file)"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "langchain (>=1.2.9,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "numexpr (>=2.12.1,<3.0.0)",
    "grandalf (>=0.8,<0.9)",
    "uv (>=0.10.0,<0.11.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "langgraph-checkpoint (>=4.0.0,<5.0.0)",
    "packaging (>=26.0,<27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
