[project]
name = "ai-agent"
version = "0.2.0"
description = "A ReAct + RAG AI agent powered by **GPT-4o-mini** and **ChromaDB** for internal knowledge retrieval from Markdown documents."
authors = [
    {name = "Hiro",email = "webmaster@supaahiro.org"}
]
license = {text = "**No-Commercial License** (see LICENSE file)"}
readme = "README.md"
requires-python = ">=3.13,<3.14.0"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.1"
black = "^26.1.0"
isort = "^8.0.0"
langchain = "^1.2.9"
langchain-openai = "^1.1.7"
langchain-community = "^0.4.1"
langgraph = "^1.0.8"
langchain-chroma = "^1.1.0"
numexpr = "^2.12.1"
grandalf = "^0.8"
uv = "^0.10.0"
pytest = "^9.0.2"
langgraph-checkpoint = "^4.0.0"
packaging = "^26.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
